--- a/css/styles.css
+++ b/css/styles.css
@@ -7334,7 +7334,7 @@
 
   /* rtl:end:remove */
   .text-primary {
-    color: #d3a625 !important;
+    color: #ffffff !important;
   }
 
   .text-secondary {
