--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,10 @@
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
+  
+  .heavy-font {
+    font-weight: 600;
+  }
 
   hr {
     margin: 1rem 0;
@@ -7334,11 +7338,11 @@
 
   /* rtl:end:remove */
   .text-primary {
-    color: #ffffff !important;
+    color: #d3a625 !important;
   }
 
   .text-secondary {
-    color: #6e8e58 !important;
+    color: #FFFFFF !important;
   }
 
   .text-success {
@@ -10899,6 +10903,26 @@
     padding-right: 2rem;
   }
 
+  .fb-container {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .fb-header-container{
+    justify-content: center;
+  }
+
+  .fb-header{
+    margin-top: 10%;
+  }
+
+  .fb-page {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+
   #mainNav {
     background-color: rgba(131, 0, 21, 0.788);
     font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -10907,7 +10931,7 @@
     color: #6e8e58;
   }
   #mainNav .navbar-nav .nav-item .nav-link {
-    color: #6e8e58;
+    color: #ffffff;
     font-weight: 800;
   }
   #mainNav .navbar-nav .nav-item.active .nav-link {
@@ -10918,7 +10942,7 @@
       font-size: 0.9rem;
     }
     #mainNav .navbar-nav .nav-item .nav-link:hover {
-      color: rgb(255, 255, 255);
+      color: #d3a625;
     }
     #mainNav .navbar-nav .nav-item.active .nav-link:hover {
       transform: scale(1.1);
